@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-08-04T08:27:01Z",
+  "timestamp" : "2022-08-04T16:28:56Z",
   "count_outdated" : 2307,
   "uniques_outdated" : 520,
   "count" : 2342,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-07-21T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-08-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
